--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -2,7 +2,7 @@ div.nl-section.nl-create-team.homepage-field
 	div.row
 		div.col-12.no-padding-mobile.text-center
 			h5 MY TEAMS
-		div.col-12.col-md-8.offset-md-2.col-lg-6.offset-lg-3.col-xl-6.offset-xl-3.no-padding-mobile
+		div.col-12.col-sm-8.offset-sm-2.col-md-8.offset-md-2.col-lg-6.offset-lg-3.col-xl-6.offset-xl-3.no-padding-mobile
 			form.form-signin.dropdown-my-teams
 				.input-group
 					select#country.form-control.custom-select(placeholder='COUNTRY', required='')
@@ -20,7 +20,7 @@ div.nl-section.nl-create-team.homepage-field
 					div.nl-player-block.nl-FLEX-position(data-position="FLEX")
 						img(src="assets/img/football/img-FLEX.png" alt="FLEX")
 						div.nl-player-block--data
-							p gronkowski
+							p.not-playing gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-K-position(data-position="K")
 						img(src="assets/img/football/img-K.png" alt="K")
@@ -30,7 +30,7 @@ div.nl-section.nl-create-team.homepage-field
 					div.nl-player-block.nl-LRB-position(data-position="LRB")
 						img(src="assets/img/football/img-LRB.png" alt="LRB")
 						div.nl-player-block--data
-							p gronkowski
+							p.playing gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-RRB-position(data-position="RRB")
 						img(src="assets/img/football/img-RRB.png" alt="RRB")
@@ -40,22 +40,22 @@ div.nl-section.nl-create-team.homepage-field
 					div.nl-player-block.nl-QB-position(data-position="QB")
 						img(src="assets/img/football/img-QB.png" alt="QB")
 						div.nl-player-block--data
-							p gronkowski
+							p.not-playing gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-LWR-position(data-position="LWR")
 						img(src="assets/img/football/img-LWR.png" alt="LWR")
 						div.nl-player-block--data
-							p gronkowski
+							p.playing gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-RWR-position(data-position="RWR")
 						img(src="assets/img/football/img-RWR.png" alt="RWR")
 						div.nl-player-block--data
-							p gronkowski
+							p.played gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-TE-position(data-position="TE")
 						img(src="assets/img/football/img-TE.png" alt="TE")
 						div.nl-player-block--data
-							p gronkowski
+							p.played gronkowski
 							p.data.orange <span>12.67</span> <span>$42000</span>
 					div.nl-player-block.nl-DEF-position(data-position="DEF")
 							#create-helmet.final-helmet(style='display: block;')
@@ -68,7 +68,7 @@ div.nl-section.nl-create-team.homepage-field
 								p PATRIOTS
 								p.data.orange <span>12.67</span> <span>$42000</span>			
 		div.row
-			div.col-12.col-lg-8.offset-lg-2					
+			div.col-12.offset-0.col-lg-8.offset-lg-2					
 				div.nl-team-list.nl-my-teams.hide
 					.nl-card-wrapper
 						.row
@@ -148,7 +148,7 @@ div.nl-section.nl-create-team.homepage-field
 											td.pos DEF
 											td 30
 											td $0
-			div.col-12.col-lg-12.col-xl-10.offset-xl-1
+			div.col-12.offset-0.col-sm-8.offset-sm-2.col-lg-12.offset-lg-0.col-xl-10.offset-xl-1
 				div.nl-team-info
 					div.nl-team-data
 						div.row 
