--- a/markup/_layouts/_content/_homepage/top5-manager-soccer.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager-soccer.jade
@@ -80,8 +80,7 @@ div.tab-content(id="top5-manager-content")
 												p 1
 											div.manager-thumbnail-name
 												p Rafael
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 							li.nav-item
 								a(href="" data-target="#carouselTop5Managers" data-slide-to="1" )
 									div.menu-item.top-5
@@ -92,8 +91,7 @@ div.tab-content(id="top5-manager-content")
 												p 2
 											div.manager-thumbnail-name
 												p Oscar
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 							li.nav-item
 								a(href="" data-target="#carouselTop5Managers" data-slide-to="2" )
 									div.menu-item.top-5
@@ -104,8 +102,7 @@ div.tab-content(id="top5-manager-content")
 												p 3
 											div.manager-thumbnail-name
 												p Dan
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 							li.nav-item
 								a(href="" data-target="#carouselTop5Managers" data-slide-to="3" )
 									div.menu-item.top-5
@@ -116,8 +113,7 @@ div.tab-content(id="top5-manager-content")
 												p 4
 											div.manager-thumbnail-name
 												p Nicholas
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 							li.nav-item
 								a(href="" data-target="#carouselTop5Managers" data-slide-to="4" )
 									div.menu-item.top-5
@@ -128,8 +124,7 @@ div.tab-content(id="top5-manager-content")
 												p 5
 											div.manager-thumbnail-name
 												p Anthony
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 
 						div.carousel-inner
 							div.carousel-item.active
@@ -144,8 +139,6 @@ div.tab-content(id="top5-manager-content")
 															p 1
 														div.name
 															p Rafael
-														div.points-in-bar
-															p.points 121 PTS
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -255,14 +248,12 @@ div.tab-content(id="top5-manager-content")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/about/person11.png', style='display: block;'  class="img-fluid")
+													img#top-manager(src='assets/img/about/person1.png', style='display: block;' class="img-fluid")
 													div.manager-image-inner
 														div.number
-															p 2
+															p 1
 														div.name
-															p Oscar
-														div.points-in-bar
-															p.points 121 PTS
+															p Rafael
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -363,23 +354,21 @@ div.tab-content(id="top5-manager-content")
 											div.col-12.hidden-lg-up.col-sm-6.offset-sm-3.hidden-title-bar
 												div.manager-image-inner
 														div.number
-															p 2
+															p 1
 														div.name
-															p Oscar
+															p Rafael
 							div.carousel-item
 								div.tab-content
 									div#manager1.tab-pane.active(role="tabpanel")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/about/person10.png', style='display: block;'  class="img-fluid")
+													img#top-manager(src='assets/img/about/person1.png', style='display: block;' class="img-fluid")
 													div.manager-image-inner
 														div.number
-															p 3
+															p 1
 														div.name
-															p Dan
-														div.points-in-bar
-															p.points 121 PTS
+															p Rafael
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -480,23 +469,21 @@ div.tab-content(id="top5-manager-content")
 											div.col-12.hidden-lg-up.col-sm-6.offset-sm-3.hidden-title-bar
 												div.manager-image-inner
 														div.number
-															p 3
+															p 1
 														div.name
-															p Dan
+															p Rafael
 							div.carousel-item
 								div.tab-content
 									div#manager1.tab-pane.active(role="tabpanel")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/about/person4.png', style='display: block;'  class="img-fluid")
+													img#top-manager(src='assets/img/about/person1.png', style='display: block;' class="img-fluid")
 													div.manager-image-inner
 														div.number
-															p 4
+															p 1
 														div.name
-															p Nicholas
-														div.points-in-bar
-															p.points 121 PTS
+															p Rafael
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -597,23 +584,21 @@ div.tab-content(id="top5-manager-content")
 											div.col-12.hidden-lg-up.col-sm-6.offset-sm-3.hidden-title-bar
 												div.manager-image-inner
 														div.number
-															p 4
+															p 1
 														div.name
-															p Nicholas
+															p Rafael
 							div.carousel-item
 								div.tab-content
 									div#manager1.tab-pane.active(role="tabpanel")
 										div.row.player
 											div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
 												#top5-managers-picture(style='display: block;')
-													img#top-manager(src='assets/img/about/person5.png', style='display: block;'  class="img-fluid")
+													img#top-manager(src='assets/img/about/person1.png', style='display: block;' class="img-fluid")
 													div.manager-image-inner
 														div.number
-															p 5
+															p 1
 														div.name
-															p Anthony
-														div.points-in-bar
-															p.points 121 PTS
+															p Rafael
 											div.col-12.col-xs-7.team-list-view.col-sm-6.offset-sm-3.col-lg-7.offset-lg-0
 												div.nl-team-list-homepage.nl-my-teams
 													.nl-card-wrapper
@@ -714,9 +699,9 @@ div.tab-content(id="top5-manager-content")
 											div.col-12.hidden-lg-up.col-sm-6.offset-sm-3.hidden-title-bar
 												div.manager-image-inner
 														div.number
-															p 5
+															p 1
 														div.name
-															p Anthony
+															p Rafael
 
 	div(role='tabpanel' class='tab-pane top-level-panel2' id='week4')
 		p week 4
