--- a/markup/_layouts/_content/_homepage/top5-player-soccer.jade
+++ b/markup/_layouts/_content/_homepage/top5-player-soccer.jade
@@ -80,8 +80,7 @@ div.tab-content(id="top5-player-content")
 												p 1
 											div.player-thumbnail-name
 												p Ronaldo
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 							li.nav-item
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="1")
 									div.menu-item.top-5
@@ -92,8 +91,7 @@ div.tab-content(id="top5-player-content")
 												p 2
 											div.player-thumbnail-name
 												p Messi
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 							li.nav-item
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="2")
 									div.menu-item.top-5
@@ -104,8 +102,7 @@ div.tab-content(id="top5-player-content")
 												p 3
 											div.player-thumbnail-name
 												p Ramos
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 							li.nav-item
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="3")
 									div.menu-item.top-5
@@ -116,8 +113,7 @@ div.tab-content(id="top5-player-content")
 												p 4
 											div.player-thumbnail-name
 												p Henry
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 							li.nav-item
 								a.active(href="" data-target="#carouselTop5Players" data-slide-to="4")
 									div.menu-item.top-5
@@ -128,8 +124,7 @@ div.tab-content(id="top5-player-content")
 												p 5
 											div.player-thumbnail-name
 												p Robben
-											div.points-in-bar
-												p.points 121 PTS
+												p.orange 121 PTS
 						div.carousel-inner
 							div.carousel-item.active
 								div.tab-content
@@ -142,7 +137,6 @@ div.tab-content(id="top5-player-content")
 														p 1
 													div.name
 														p Cristiano Ronaldo
-													p.points 121 PTS 
 											div.player-info
 												p FP points
 												h5 121.5
@@ -163,7 +157,6 @@ div.tab-content(id="top5-player-content")
 														p 2
 													div.name
 														p Lionel Messi
-													p.points 121 PTS 
 											div.player-info
 												p FP points
 												h5 121.5
@@ -184,7 +177,6 @@ div.tab-content(id="top5-player-content")
 														p 3
 													div.name
 														p Sergio Ramos
-													p.points 121 PTS 
 											div.player-info
 												p FP points
 												h5 121.5
@@ -205,7 +197,6 @@ div.tab-content(id="top5-player-content")
 														p 4
 													div.name
 														p Thierry Henry
-													p.points 121 PTS 
 											div.player-info
 												p FP points
 												h5 121.5
@@ -226,7 +217,6 @@ div.tab-content(id="top5-player-content")
 														p 5
 													div.name
 														p Arjen Robben
-													p.points 121 PTS 
 											div.player-info
 												p FP points
 												h5 121.5
