--- a/markup/_layouts/_content/_homepage/top5-player.jade
+++ b/markup/_layouts/_content/_homepage/top5-player.jade
@@ -276,90 +276,558 @@ div.tab-content(id="top5-player-content")
 										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
 										p
 											a(href="#") more...
-							//- div.carousel-item
-							//- 	div.tab-content
-							//- 		div#player1.tab-pane.active(role="tabpanel")
-							//- 			div.row.player
-							//- 				#top5-players-picture(style='display: block;')
-							//- 					img#top-player(src='assets/img/player1-new.png', style='display: block;')
-							//- 					div.player-image-inner
-							//- 						div.number
-							//- 							p 2
-							//- 						div.name
-							//- 							p Odell Beckham JR.
-							//- 						p.orange 121 PTS 
-							//- 				div.player-info
-							//- 					p FP points
-							//- 					h5 121.5
-							//- 					p Salary
-							//- 					h5 $7100
-							//- 					p Team Name
-							//- 					h5 Barcelona
-							//- 					p More info 
-							//- 					i.fa.fa-info-circle 
-							//- div.carousel-item
-							//- 	div.tab-content
-							//- 		div#player1.tab-pane.active(role="tabpanel")
-							//- 			div.row.player
-							//- 				#top5-players-picture(style='display: block;')
-							//- 					img#top-player(src='assets/img/player1-new.png', style='display: block;')
-							//- 					div.player-image-inner
-							//- 						div.number
-							//- 							p 3
-							//- 						div.name
-							//- 							p Matt Ryan
-							//- 						p.orange 121 PTS 
-							//- 				div.player-info
-							//- 					p FP points
-							//- 					h5 121.5
-							//- 					p Salary
-							//- 					h5 $7100
-							//- 					p Team Name
-							//- 					h5 Barcelona
-							//- 					p More info 
-							//- 					i.fa.fa-info-circle 
-							//- div.carousel-item
-							//- 	div.tab-content
-							//- 		div#player1.tab-pane.active(role="tabpanel")
-							//- 			div.row.player
-							//- 				#top5-players-picture(style='display: block;')
-							//- 					img#top-player(src='assets/img/player1-new.png', style='display: block;')
-							//- 					div.player-image-inner
-							//- 						div.number
-							//- 							p 4
-							//- 						div.name
-							//- 							p Aaron Rodgers
-							//- 						p.orange 121 PTS 
-							//- 				div.player-info
-							//- 					p FP points
-							//- 					h5 121.5
-							//- 					p Salary
-							//- 					h5 $7100
-							//- 					p Team Name
-							//- 					h5 Barcelona
-							//- 					p More info 
-							//- 					i.fa.fa-info-circle 
-							//- div.carousel-item
-							//- 	div.tab-content
-							//- 		div#player1.tab-pane.active(role="tabpanel")
-							//- 			div.row.player
-							//- 				#top5-players-picture(style='display: block;')
-							//- 					img#top-player(src='assets/img/player1-new.png', style='display: block;')
-							//- 					div.player-image-inner
-							//- 						div.number
-							//- 							p 5
-							//- 						div.name
-							//- 							p David Johnson
-							//- 						p.orange 121 PTS 
-							//- 				div.player-info
-							//- 					p FP points
-							//- 					h5 121.5
-							//- 					p Salary
-							//- 					h5 $7100
-							//- 					p Team Name
-							//- 					h5 Barcelona
-							//- 					p More info 
-							//- 					i.fa.fa-info-circle 
+							div.carousel-item
+								div.new-top5-players-container
+									div.stats-table
+										div.new-above-table
+											div.row
+												div.col-12.text-center
+													h3.player-name Tom Brady
+											div.row.player-stats
+												div.col-4.no-padding.player-image-container
+													h3.rank-number rank 2 
+													img#top-player-nav(src='assets/img/player1-new.png')
+												div.col-4.player-data
+													//- h3 Team
+													//- h3.orange.inline-block CHI
+													p.title TEAM
+													p.orange Patriots
+													//- h3 Pos
+													//- h3.orange.inline-block RB
+													p.title POS
+													p.orange RB
+												div.col-4.player-data
+													//- h3 Salary 
+													//- h3.orange.inline-block $3200
+													//- h3 Score 
+													//- h3.orange.inline-block 13.4
+													p.title SALARY 
+													p.orange $3200
+													p.title SCORE 
+													p.orange 13.4
+										div.tab-content
+											table.table.table-striped.new-top5-table
+												thead
+													tr
+														th week
+														th opp
+														th paatt
+														th pacm
+														th payd
+														th patd
+														th paint
+														th ruyd
+														th rutd
+												tbody
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+
+									div.new-news-player.hidden-xs-down
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+							div.carousel-item
+								div.new-top5-players-container
+									div.stats-table
+										div.new-above-table
+											div.row
+												div.col-12.text-center
+													h3.player-name Rob Growkowski
+											div.row.player-stats
+												div.col-4.no-padding.player-image-container
+													h3.rank-number rank 3
+													img#top-player-nav(src='assets/img/player1-new.png')
+												div.col-4.player-data
+													//- h3 Team
+													//- h3.orange.inline-block CHI
+													p.title TEAM
+													p.orange Patriots
+													//- h3 Pos
+													//- h3.orange.inline-block RB
+													p.title POS
+													p.orange RB
+												div.col-4.player-data
+													//- h3 Salary 
+													//- h3.orange.inline-block $3200
+													//- h3 Score 
+													//- h3.orange.inline-block 13.4
+													p.title SALARY 
+													p.orange $3200
+													p.title SCORE 
+													p.orange 13.4
+										div.tab-content
+											table.table.table-striped.new-top5-table
+												thead
+													tr
+														th week
+														th opp
+														th paatt
+														th pacm
+														th payd
+														th patd
+														th paint
+														th ruyd
+														th rutd
+												tbody
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+
+									div.new-news-player.hidden-xs-down
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+							div.carousel-item
+								div.new-top5-players-container
+									div.stats-table
+										div.new-above-table
+											div.row
+												div.col-12.text-center
+													h3.player-name David Johnson
+											div.row.player-stats
+												div.col-4.no-padding.player-image-container
+													h3.rank-number rank 4 
+													img#top-player-nav(src='assets/img/player1-new.png')
+												div.col-4.player-data
+													//- h3 Team
+													//- h3.orange.inline-block CHI
+													p.title TEAM
+													p.orange Patriots
+													//- h3 Pos
+													//- h3.orange.inline-block RB
+													p.title POS
+													p.orange RB
+												div.col-4.player-data
+													//- h3 Salary 
+													//- h3.orange.inline-block $3200
+													//- h3 Score 
+													//- h3.orange.inline-block 13.4
+													p.title SALARY 
+													p.orange $3200
+													p.title SCORE 
+													p.orange 13.4
+										div.tab-content
+											table.table.table-striped.new-top5-table
+												thead
+													tr
+														th week
+														th opp
+														th paatt
+														th pacm
+														th payd
+														th patd
+														th paint
+														th ruyd
+														th rutd
+												tbody
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+
+									div.new-news-player.hidden-xs-down
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+							div.carousel-item
+								div.new-top5-players-container
+									div.stats-table
+										div.new-above-table
+											div.row
+												div.col-12.text-center
+													h3.player-name Matthew Sanders
+											div.row.player-stats
+												div.col-4.no-padding.player-image-container
+													h3.rank-number rank 5
+													img#top-player-nav(src='assets/img/player1-new.png')
+												div.col-4.player-data
+													//- h3 Team
+													//- h3.orange.inline-block CHI
+													p.title TEAM
+													p.orange Patriots
+													//- h3 Pos
+													//- h3.orange.inline-block RB
+													p.title POS
+													p.orange RB
+												div.col-4.player-data
+													//- h3 Salary 
+													//- h3.orange.inline-block $3200
+													//- h3 Score 
+													//- h3.orange.inline-block 13.4
+													p.title SALARY 
+													p.orange $3200
+													p.title SCORE 
+													p.orange 13.4
+										div.tab-content
+											table.table.table-striped.new-top5-table
+												thead
+													tr
+														th week
+														th opp
+														th paatt
+														th pacm
+														th payd
+														th patd
+														th paint
+														th ruyd
+														th rutd
+												tbody
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+													tr
+
+														td 124
+														td JAX
+														td 30
+														td $0
+														td 234
+														td 324
+														td 30
+														td $0
+														td 765
+
+									div.new-news-player.hidden-xs-down
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
+										h5 Todd Gurley Bounces Back In Victory Over Jags
+										p Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.
+										p
+											a(href="#") more...
 
 
 	
