responsive helmets integrated on my teams

--- a/markup/_layouts/_content/contests-content.jade
+++ b/markup/_layouts/_content/contests-content.jade
@@ -77,7 +77,7 @@ section.nl-section.nl-players.nl-contests
                                                     td 1000
                                                     td
                                                         a(href='football_enter_contests.html')
-                                                            button.btn.btn-primary.btn-sm(type='button') enter
+                                                            button.btn.btn-primary.btn-sm.withdraw(type='button') withdraw
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -107,7 +107,7 @@ section.nl-section.nl-players.nl-contests
                                                     td 1000
                                                     td
                                                         a(href='football_enter_contests.html')
-                                                            button.btn.btn-primary.btn-sm(type='button') enter
+                                                            button.btn.btn-primary.btn-sm.withdraw(type='button') withdraw
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
