--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -10503,7 +10503,7 @@ p {
         .nl-section.homepage.football-homepage .nl-team-field .helmet-container img#letter {
           margin-left: 7px; } }
     .nl-section.homepage.football-homepage .nl-team-field .helmet-container img#helmet {
-      height: 90px;
+      height: 70px;
       width: auto;
       margin: 0 auto; }
 
@@ -10664,6 +10664,11 @@ p {
     left: 40%;
     bottom: 7.5%; } }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .nl-section.homepage.soccer .nl-GK-position {
+    left: 42%;
+    bottom: 6.5%; } }
+
 @media (min-width: 1899px) {
   .nl-section.homepage.soccer .nl-GK-position {
     left: 44%; } }
@@ -10693,6 +10698,11 @@ p {
     bottom: 33%;
     left: 40%; } }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .nl-section.homepage.soccer .nl-DM-position {
+    bottom: 32%;
+    left: 42%; } }
+
 @media (min-width: 1899px) {
   .nl-section.homepage.soccer .nl-DM-position {
     left: 44%; } }
@@ -10721,6 +10731,11 @@ p {
   .nl-section.homepage.soccer .nl-MM-position {
     bottom: 61%;
     left: 40%; } }
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .nl-section.homepage.soccer .nl-MM-position {
+    bottom: 61%;
+    left: 42%; } }
 
 @media (min-width: 1899px) {
   .nl-section.homepage.soccer .nl-MM-position {
@@ -11227,10 +11242,6 @@ p {
 .homepage-field img.helmet {
   height: 75px; }
 
-@media (max-width: 991px) {
-  .homepage-field {
-    margin-top: 30px; } }
-
 .homepage {
   background: url(../img/stadion_full.jpg) top center no-repeat fixed;
   background-size: cover;
@@ -11325,7 +11336,7 @@ p {
     margin-bottom: 20px; }
     @media (max-width: 767px) {
       .homepage .bottom-teams-contests-section {
-        padding-top: 20px; } }
+        margin-top: 30px; } }
   .homepage .dropdown-my-teams {
     margin-top: 1.875rem; }
     @media (max-width: 767px) {
@@ -13253,67 +13264,48 @@ td:nth-child(4).homepage-list-view {
   color: #061540;
   padding-bottom: 3.125rem;
   padding-top: 1.875rem; }
-  .nl-my-teams #create-helmet #oval {
-    position: absolute;
-    top: 21px;
-    z-index: 1;
-    right: 58px;
-    width: 7%;
-    height: auto; }
-    @media (min-width: 1850px) {
-      .nl-my-teams #create-helmet #oval {
-        right: 57px; } }
-    @media only screen and (min-width: 992px) and (max-width: 1200px) {
-      .nl-my-teams #create-helmet #oval {
-        top: 16px;
-        right: 49px; } }
-    @media only screen and (min-width: 768px) and (max-width: 991px) {
-      .nl-my-teams #create-helmet #oval {
-        top: 17px;
-        right: 51px; } }
-    @media only screen and (min-width: 576px) and (max-width: 767px) {
-      .nl-my-teams #create-helmet #oval {
-        top: 16px;
-        right: 50px; } }
-    @media only screen and (max-width: 575px) {
-      .nl-my-teams #create-helmet #oval {
-        width: 4%;
-        top: 15px;
-        right: 48px; } }
-    @media (min-width: 1681px) {
-      .nl-my-teams #create-helmet #oval {
-        width: 6%;
-        top: 20px;
-        right: 55px; } }
-  .nl-my-teams #create-helmet #letter {
-    position: absolute;
-    top: 23px;
-    z-index: 2;
-    right: 67px;
-    width: 3%;
-    height: auto; }
-    @media only screen and (min-width: 992px) and (max-width: 1200px) {
-      .nl-my-teams #create-helmet #letter {
-        top: 18px;
-        right: 56px; } }
-    @media only screen and (min-width: 768px) and (max-width: 991px) {
-      .nl-my-teams #create-helmet #letter {
-        top: 18px;
-        right: 58px; } }
-    @media only screen and (min-width: 576px) and (max-width: 767px) {
-      .nl-my-teams #create-helmet #letter {
-        top: 17px;
-        right: 56px; } }
-    @media only screen and (max-width: 575px) {
-      .nl-my-teams #create-helmet #letter {
-        top: 16px;
-        right: 55px;
-        width: 2%; } }
-    @media (min-width: 1681px) {
-      .nl-my-teams #create-helmet #letter {
-        right: 65px;
-        width: 3%;
-        top: 22px; } }
+  .nl-my-teams .helmet-container {
+    position: relative;
+    width: 90px;
+    margin: 0 auto; }
+    .nl-my-teams .helmet-container .oval-letter {
+      position: absolute;
+      top: 14px;
+      left: 9px;
+      z-index: 1;
+      width: 33px; }
+      @media only screen and (min-width: 1367px) and (max-width: 1440px) {
+        .nl-my-teams .helmet-container .oval-letter {
+          top: 15px;
+          left: 11px;
+          width: 30px; } }
+      @media only screen and (min-width: 1201px) and (max-width: 1366px) {
+        .nl-my-teams .helmet-container .oval-letter {
+          top: 15px;
+          left: 11px;
+          width: 30px; } }
+    .nl-my-teams .helmet-container img {
+      height: auto; }
+      .nl-my-teams .helmet-container img#oval {
+        position: absolute;
+        height: auto; }
+      .nl-my-teams .helmet-container img#letter {
+        position: absolute;
+        height: auto;
+        z-index: 2;
+        width: 41%;
+        margin-left: 9px;
+        margin-top: 3px; }
+        @media only screen and (min-width: 1201px) and (max-width: 1366px) {
+          .nl-my-teams .helmet-container img#letter {
+            margin-left: 7px; } }
+        @media only screen and (min-width: 992px) and (max-width: 1200px) {
+          .nl-my-teams .helmet-container img#letter {
+            margin-left: 7px; } }
+      .nl-my-teams .helmet-container img#helmet {
+        height: 90px;
+        width: auto;
+        margin: 0 auto; }
   .nl-my-teams .nl-status-wrapper {
     margin: 0 auto; }
   .nl-my-teams .nl-status-wrapper ul {
@@ -14132,13 +14124,6 @@ td:nth-child(4).homepage-list-view {
         .nl-create-team .nl-team-field.football .nl-player-block img,
         .nl-live-score .nl-team-field.football .nl-player-block img {
           max-width: 95px; } }
-    .nl-create-team .nl-team-field.football .nl-player-block.nl-DEF-position img,
-    .nl-live-score .nl-team-field.football .nl-player-block.nl-DEF-position img {
-      max-width: 80px; }
-    @media only screen and (min-width: 992px) and (max-width: 1366px) {
-      .nl-create-team .nl-team-field.football .nl-player-block.nl-DEF-position img,
-      .nl-live-score .nl-team-field.football .nl-player-block.nl-DEF-position img {
-        max-width: 70px; } }
   @media (max-width: 767px) {
     .nl-create-team .nl-team-field,
     .nl-live-score .nl-team-field {
