--- a/markup/_layouts/_content/homepage-content_soccer.jade
+++ b/markup/_layouts/_content/homepage-content_soccer.jade
@@ -17,7 +17,7 @@ section.nl-section.homepage.soccer
 			div.col-12.col-lg-6.col-xl-6.week.no-padding-all-sides
 				include _homepage/top5-manager-soccer
 		div.row.contests.bottom-teams-contests-section
-			div.col-12.col-sm-6.offset-sm-3.col-lg-5.offset-lg-0.col-xl-5.field
+			div.col-10.offset-1.col-sm-10.offset-sm-1.col-lg-5.offset-lg-0.col-xl-5.field
 				include _homepage/field-soccer
 			div.col-12.col-lg-6.offset-lg-1.offset-xl-1.col-xl-6
 				include _homepage/upcoming_contest_soccer
