--- a/markup/_scss/sections/_nl-create-team.scss
+++ b/markup/_scss/sections/_nl-create-team.scss
@@ -795,12 +795,12 @@
       }
 
       .nl-player-block.nl-DEF-position img {
-        max-width: 80px;
+        //max-width: 80px;
       }
 
       @include respond-to(tabdisp){
         .nl-player-block.nl-DEF-position img {
-          max-width: 70px;
+          //max-width: 70px;
         }
       }
 
