--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -946,7 +946,7 @@ section.nl-section.nl-players.nl-create-team
                                 p.placeholder TE
                                 p.data.orange.display-none <span>12.67</span> <span>$42000</span>
                         div.nl-player-block.nl-DEF-position(data-position="DEF")
-                            img(src="assets/img/helmet-3" alt="logo" class="vis-hidden")
+                            img(src="assets/img/helmet/white-helmet.png" alt="logo" class="vis-hidden")
                             div.nl-player-block--data
                                 button.btn.btn-link.btn-player-close.vis-hidden(type="button") <i class="fa fa-close" aria-hidden="true"></i>
                                 p.display-none Patriots
